fixes featured card autocomplete jumping on hover

--- a/director.css
+++ b/director.css
@@ -7,6 +7,11 @@ select, div {
   margin: 20px;
 }
 
+.ui-menu .ui-state-focus,
+.ui-menu .ui-state-active {
+  margin: 20px ! important;
+}
+
 select, input[type=text] {
   display: block;
   margin-bottom: 20px;
